--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.3",
+    "antd": "^3.16.1",
     "chalk": "^2.4.2",
+    "mini-css-extract-plugin": "^0.5.0",
     "ora": "^3.2.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
@@ -22,7 +24,12 @@
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
+    "css-loader": "^2.1.1",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
+    "postcss-loader": "^3.0.0",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
     "typescript": "^3.3.4000"
   }
 }
