--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^3.16.1",
     "chalk": "^2.4.2",
     "mini-css-extract-plugin": "^0.5.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "ora": "^3.2.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
