--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.3",
     "antd": "^3.16.1",
-    "babel-core": "^6.26.3",
     "chalk": "^2.4.2",
     "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -26,9 +25,10 @@
     "webpack": "^4.29.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "awesome-typescript-loader": "^5.2.1",
-    "babel": "^6.23.0",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^8.0.5",
     "babel-plugin-import": "^1.11.0",
     "css-loader": "^2.1.1",
     "less": "^3.9.0",
@@ -36,6 +36,7 @@
     "postcss-loader": "^3.0.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
+    "transform-runtime": "0.0.0",
     "typescript": "^3.3.4000"
   }
 }
